--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,10 +11,8 @@
       "preLaunchTask": "watch build",
       "program": "${workspaceFolder}/BlocoNaRua.Restful/bin/Debug/net8.0/BlocoNaRua.Restful.dll",
       "cwd": "${workspaceFolder}/BlocoNaRua.Restful",
-      "serverReadyAction": {
-        "action": "openExternally",
-        "pattern": "\\bNow listening on:\\s+(https?://\\S+)",
-        "uriFormat": "%s/swagger"
+      "launchBrowser": {
+        "enabled": true
       },
       "env": {
         "ASPNETCORE_ENVIRONMENT": "Development"
