--- a/.github/workflows/main_bloconarua-dev.yml
+++ b/.github/workflows/main_bloconarua-dev.yml
@@ -1,10 +1,13 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - bloconarua-dev
+name: Build and deploy to Azure Web App - bloconarua-dev
 
 on:
-  push:
+  workflow_run:
+    workflows: ["Test .NET Core App"]
+    types:
+      - completed
     branches:
       - main
   workflow_dispatch:
@@ -13,7 +16,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -21,7 +24,7 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0'
+          dotnet-version: "8.0"
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
@@ -39,18 +42,18 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -62,7 +65,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'bloconarua-dev'
-          slot-name: 'Production'
+          app-name: "bloconarua-dev"
+          slot-name: "Production"
           package: .
-          
