Fix: workflow and test project publish settings

--- a/.github/workflows/main_bloconarua-dev.yml
+++ b/.github/workflows/main_bloconarua-dev.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy to Azure Web App - bloconarua-dev
+name: Deploy to Azure Web App - bloconarua-dev
 
 on:
   workflow_run:
@@ -30,7 +30,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish ./BlocoNaRua.Restful/BlocoNaRua.Restful.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
