New: members controller tests

--- a/BlocoNaRua.Tests/BlocoNaRua.Tests.csproj
+++ b/BlocoNaRua.Tests/BlocoNaRua.Tests.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BlocoNaRua.Data\BlocoNaRua.Data.csproj" />
+    <ProjectReference Include="..\BlocoNaRua.Restful\BlocoNaRua.Restful.csproj" />
   </ItemGroup>
 
   <ItemGroup>
