Fix: member controller and endpoints namings

--- a/BlocoNaRua.Restful/BlocoNaRua.Restful.csproj
+++ b/BlocoNaRua.Restful/BlocoNaRua.Restful.csproj
@@ -4,14 +4,24 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>dotnet-BlocoNaRua.Restful-c5f0e6f0-b3b6-4b3f-9e5f-8d3a1b2c3d4e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
+    <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BlocoNaRua.Data\BlocoNaRua.Data.csproj" />
+    <ProjectReference Include="..\BlocoNaRua.Services\BlocoNaRua.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
