--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,22 +1,12 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch .NET Core",
+      "name": ".NET Core Watch",
       "type": "coreclr",
-      "request": "launch",
-      "preLaunchTask": "watch build",
-      "program": "${workspaceFolder}/BlocoNaRua.Restful/bin/Debug/net8.0/BlocoNaRua.Restful.dll",
-      "cwd": "${workspaceFolder}/BlocoNaRua.Restful",
-      "launchBrowser": {
-        "enabled": true
-      },
-      "env": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
+      "request": "attach",
+      "preLaunchTask": "watch",
+      "processName": "BlocoNaRua.Restful.exe",
       "logging": {
         "moduleLoad": false
       }
